New implementation and update specification A, B-2, C , D
