# src/main/java/hei/school/agricole/dto/CollectivityWithMembers.java
@@ -1,0 +1,51 @@
+package hei.school.agricole.dto;
+
+import hei.school.agricole.entity.Member;
+import java.time.LocalDate;
+import java.util.List;
+
+public class CollectivityWithMembers {
+    private String id;
+    private String name;
+    private String number;
+    private String location;
+    private LocalDate creationDate;
+    private List<Member> members;
+
+    public String getId() {
+        return id;
+    }
+    public void setId(String id) {
+        this.id = id;
+    }
+    public String getName() {
+        return name;
+    }
+    public void setName(String name) {
+        this.name = name;
+    }
+    public String getNumber() {
+        return number;
+    }
+    public void setNumber(String number) {
+        this.number = number;
+    }
+    public String getLocation() {
+        return location;
+    }
+    public void setLocation(String location) {
+        this.location = location;
+    }
+    public LocalDate getCreationDate() {
+        return creationDate;
+    }
+    public void setCreationDate(LocalDate creationDate) {
+        this.creationDate = creationDate;
+    }
+    public List<Member> getMembers() {
+        return members;
+    }
+    public void setMembers(List<Member> members) {
+        this.members = members;
+    }
+}
