# src/main/java/hei/school/agricole/entity/MobileBankingAccount.java
@@ -3,33 +3,19 @@ package hei.school.agricole.entity;
 import hei.school.agricole.enums.MobileBankingService;
 
 public class MobileBankingAccount extends FinancialAccount {
-    private String holderName;
     private MobileBankingService mobileBankingService;
     private String mobileNumber;
 
-    public String getHolderName() {
-
-        return holderName;
-    }
-    public void setHolderName(String holderName) {
-
-        this.holderName = holderName;
-    }
     public MobileBankingService getMobileBankingService() {
-
         return mobileBankingService;
     }
     public void setMobileBankingService(MobileBankingService mobileBankingService) {
-
         this.mobileBankingService = mobileBankingService;
     }
     public String getMobileNumber() {
-
         return mobileNumber;
     }
     public void setMobileNumber(String mobileNumber) {
-
         this.mobileNumber = mobileNumber;
     }
 }
-
